applications/neuroscan/deploy/templates/ingress-promoterdb.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/issuer: letsencrypt-neuroscan
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
      nginx.ingress.kubernetes.io/proxy-body-size: 250m
      nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
      nginx.ingress.kubernetes.io/rewrite-target: /$1
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
    name: promoterdb
    namespace: neuroscan
  spec:
    rules:
    - host: promoters.wormguides.org
      http:
        paths:
        - backend:
            service:
              name: neuroscan
              port:
                number: 1337
          path: /(.*)
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - promoters.wormguides.org
      secretName: tls-secret-promoterdb
